src/test/ui/c-variadic/variadic-ffi-1.stderr
error[E0045]: C-variadic function must have C or cdecl calling convention
  --> $DIR/variadic-ffi-1.rs:5:5
   |
LL |     fn printf(_: *const u8, ...);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ C-variadics require C or cdecl calling convention

error: aborting due to previous error

For more information about this error, try `rustc --explain E0045`.
